@@ -50,3 +50,70 @@ class CAutomation(Automation):
         print (json.dumps(i, indent=2))
 
         return {'return':0}
+
+    ############################################################
+    def show(self, i):
+        """
+        Show cache
+
+        Args:
+          (CM input dict): 
+
+          (out) (str): if 'con', output to console
+
+          automation (str): automation as CM string object
+
+          parsed_automation (list): prepared in CM CLI or CM access function
+                                    [ (automation alias, automation UID) ] or
+                                    [ (automation alias, automation UID), (automation repo alias, automation repo UID) ]
+
+          (artifact) (str): artifact as CM string object
+
+          (parsed_artifact) (list): prepared in CM CLI or CM access function
+                                    [ (artifact alias, artifact UID) ] or
+                                    [ (artifact alias, artifact UID), (artifact repo alias, artifact repo UID) ]
+
+          ...
+
+        Returns:
+          (CM return dict):
+
+          * return (int): return code == 0 if no error and >0 if error
+          * (error) (str): error string if return>0
+
+          * Output from this automation action
+
+        """
+        # Check parsed automation
+        if 'parsed_automation' not in i:
+           return {'return':1, 'error':'automation is not specified'}
+
+        console = i.get('out') == 'con'
+
+        # Find CM artifact(s)
+        i['out'] = None
+        r = self.search(i)
+
+        if r['return']>0: return r
+
+        lst = r['list']
+        for artifact in lst:
+            path = artifact.path
+            meta = artifact.meta
+            original_meta = artifact.original_meta
+
+            alias = meta.get('alias','')
+            uid = meta.get('uid','')
+
+            tags = sorted(meta.get('tags',[]))
+            version = meta.get('version','')
+
+            if console:
+                print ('')
+                print ('* cache:: {}'.format(uid))
+                print ('    Tags: {}'.format(tags))
+                if version!='':
+                    print ('    Version: {}'.format(version))
+                print ('    Path: {}'.format(path))
+
+        return {'return':0, 'list': lst}
